gateway_api/gateway_class.yml
# Gateway Class
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gc 
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller  ## after installing envoy crd
