gateway_api/references_grant.yml
# Reference Grant
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gw-to-backend
  namespace: backend
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: gw
  to:
  - group: ""
    kind: Service

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gw-to-frontend
  namespace: frontend
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: gw
  to:
  - group: ""
    kind: Service

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gw-to-portfolio
  namespace: portfolio
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: gw
  to:
  - group: ""
    kind: Service
