gateway_api/backenddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: backend
          image: 343218212245.dkr.ecr.ap-southeast-2.amazonaws.com/mybackend:v1.1.1
          ports:
            - containerPort: 3200

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend 
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3200
  type: ClusterIP
