gateway_api/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: react-vite

  template:
    metadata:
      labels:
        app: react-vite

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: react-vite
          image: ghcr.io/grishma2477/react-vite-1:01
          imagePullPolicy: Always

          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: frontend

spec:
  type: ClusterIP

  selector:
    app: react-vite

  ports:
    - port: 80
      targetPort: 80
